Fix announcement modal is not visible

--- a/themes/majorca/css/main.less
+++ b/themes/majorca/css/main.less
@@ -342,3 +342,5 @@ div.ccm-page {
   line-height: @line-height-base;
   text-transform: @transform;
 }
+
+#concrete-announcement-modal { opacity: 1; }
